yamcs-web/packages/displays/src/uss/expressions/parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.1.13 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export class SyntaxError extends Error {
  public static buildMessage(expected: string, found: string) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) => {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any(): string {
        return "any character";
      },

      end(): string {
        return "end of input";
      },

      other(expectation): string {
        return expectation.description;
      }
    };

    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected1) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: string;
  public found: string;
  public location: any;
  public name: string;

  constructor(message: string, expected: string, found: string, location) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { Start: peg$parseStart };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = function(formula) { return formula; };
  const peg$c1 = function(head, tail) {
      return {
        type: 'Formula',
        body: buildList(head, tail, 1)
      };
    };
  const peg$c2 = function(expression) {
      return {
        type: 'ExpressionStatement',
        expression: expression
      }
    };
  const peg$c3 = " ";
  const peg$c4 = peg$literalExpectation(" ", false);
  const peg$c5 = "\t";
  const peg$c6 = peg$literalExpectation("\t", false);
  const peg$c7 = peg$otherExpectation("end of line");
  const peg$c8 = "\n";
  const peg$c9 = peg$literalExpectation("\n", false);
  const peg$c10 = "\r\n";
  const peg$c11 = peg$literalExpectation("\r\n", false);
  const peg$c12 = "\r";
  const peg$c13 = peg$literalExpectation("\r", false);
  const peg$c14 = ";";
  const peg$c15 = peg$literalExpectation(";", false);
  const peg$c16 = peg$anyExpectation();
  const peg$c17 = "and";
  const peg$c18 = peg$literalExpectation("and", true);
  const peg$c19 = "else";
  const peg$c20 = peg$literalExpectation("else", true);
  const peg$c21 = "equals";
  const peg$c22 = peg$literalExpectation("equals", true);
  const peg$c23 = "false";
  const peg$c24 = peg$literalExpectation("false", true);
  const peg$c25 = "if";
  const peg$c26 = peg$literalExpectation("if", true);
  const peg$c27 = "in";
  const peg$c28 = peg$literalExpectation("in", true);
  const peg$c29 = "then";
  const peg$c30 = peg$literalExpectation("then", true);
  const peg$c31 = "not";
  const peg$c32 = peg$literalExpectation("not", true);
  const peg$c33 = "or";
  const peg$c34 = peg$literalExpectation("or", true);
  const peg$c35 = "true";
  const peg$c36 = peg$literalExpectation("true", true);
  const peg$c37 = "xor";
  const peg$c38 = peg$literalExpectation("xor", true);
  const peg$c39 = function(symbol) {
      return symbol;
    };
  const peg$c40 = peg$otherExpectation("identifier");
  const peg$c41 = function(head, tail) {
      return {
        type: 'Symbol',
        name: head + tail.join('')
      };
    };
  const peg$c42 = /^[a-zA-Z]/;
  const peg$c43 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  const peg$c44 = "_";
  const peg$c45 = peg$literalExpectation("_", false);
  const peg$c46 = /^[a-zA-Z0-9_]/;
  const peg$c47 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  const peg$c48 = peg$otherExpectation("boolean");
  const peg$c49 = function() { return { type: 'BooleanLiteral', value: true }; };
  const peg$c50 = function() { return { type: 'BooleanLiteral', value: false }; };
  const peg$c51 = peg$otherExpectation("number");
  const peg$c52 = ".";
  const peg$c53 = peg$literalExpectation(".", false);
  const peg$c54 = function() {
      return { type: 'NumericLiteral', value: parseFloat(text()) };
    };
  const peg$c55 = "0";
  const peg$c56 = peg$literalExpectation("0", false);
  const peg$c57 = /^[0-9]/;
  const peg$c58 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c59 = /^[1-9]/;
  const peg$c60 = peg$classExpectation([["1", "9"]], false, false);
  const peg$c61 = peg$otherExpectation("string");
  const peg$c62 = "\"";
  const peg$c63 = peg$literalExpectation("\"", false);
  const peg$c64 = /^[^\n\r\f"]/;
  const peg$c65 = peg$classExpectation(["\n", "\r", "\f", "\""], true, false);
  const peg$c66 = function(chars) {
      return { type: 'StringLiteral', value: chars.join('') };
    };
  const peg$c67 = "'";
  const peg$c68 = peg$literalExpectation("'", false);
  const peg$c69 = /^[^\n\r\f']/;
  const peg$c70 = peg$classExpectation(["\n", "\r", "\f", "'"], true, false);
  const peg$c71 = "(";
  const peg$c72 = peg$literalExpectation("(", false);
  const peg$c73 = ")";
  const peg$c74 = peg$literalExpectation(")", false);
  const peg$c75 = function(expression) { return expression; };
  const peg$c76 = "[";
  const peg$c77 = peg$literalExpectation("[", false);
  const peg$c78 = "]";
  const peg$c79 = peg$literalExpectation("]", false);
  const peg$c80 = function(argument) {
      return {
        type: 'UnaryExpression',
        operator: 'ABS',
        argument: argument,
      };
    };
  const peg$c81 = function(operator, argument) {
      return {
        type: 'UnaryExpression',
        operator: operator,
        argument: argument,
      };
    };
  const peg$c82 = "-";
  const peg$c83 = peg$literalExpectation("-", false);
  const peg$c84 = "+";
  const peg$c85 = peg$literalExpectation("+", false);
  const peg$c86 = function(callee, args) {
      return {
        type: 'CallExpression',
        callee: callee,
        arguments: args
      };
    };
  const peg$c87 = function(args) {
      return optionalList(extractOptional(args, 0));
    };
  const peg$c88 = ",";
  const peg$c89 = peg$literalExpectation(",", false);
  const peg$c90 = function(head, tail) {
      return buildList(head, tail, 3);
    };
  const peg$c91 = function(argument, operator) {
      return {
        type: 'UnaryExpression',
        operator: operator,
        argument: argument
      };
    };
  const peg$c92 = "%";
  const peg$c93 = peg$literalExpectation("%", false);
  const peg$c94 = "\xB2";
  const peg$c95 = peg$literalExpectation("\xB2", false);
  const peg$c96 = "*";
  const peg$c97 = peg$literalExpectation("*", false);
  const peg$c98 = "/";
  const peg$c99 = peg$literalExpectation("/", false);
  const peg$c100 = "^";
  const peg$c101 = peg$literalExpectation("^", false);
  const peg$c102 = function(head, tail) {
        return buildBinaryExpression(head, tail);
      };
  const peg$c103 = function(head, tail) {
      return buildBinaryExpression(head, tail);
    };
  const peg$c104 = "<=";
  const peg$c105 = peg$literalExpectation("<=", false);
  const peg$c106 = ">=";
  const peg$c107 = peg$literalExpectation(">=", false);
  const peg$c108 = "<";
  const peg$c109 = peg$literalExpectation("<", false);
  const peg$c110 = ">";
  const peg$c111 = peg$literalExpectation(">", false);
  const peg$c112 = "==";
  const peg$c113 = peg$literalExpectation("==", false);
  const peg$c114 = "!=";
  const peg$c115 = peg$literalExpectation("!=", false);
  const peg$c116 = "<>";
  const peg$c117 = peg$literalExpectation("<>", false);
  const peg$c118 = function(head, tail) {
       return buildBinaryExpression(head, tail);
    };
  const peg$c119 = "&";
  const peg$c120 = peg$literalExpectation("&", false);
  const peg$c121 = /^[&]/;
  const peg$c122 = peg$classExpectation(["&"], false, false);
  const peg$c123 = "~";
  const peg$c124 = peg$literalExpectation("~", false);
  const peg$c125 = "|";
  const peg$c126 = peg$literalExpectation("|", false);
  const peg$c127 = /^[|]/;
  const peg$c128 = peg$classExpectation(["|"], false, false);
  const peg$c129 = function(head, tail) {
      return buildLogicalExpression(head, tail);
    };
  const peg$c130 = "&&";
  const peg$c131 = peg$literalExpectation("&&", false);
  const peg$c132 = "||";
  const peg$c133 = peg$literalExpectation("||", false);
  const peg$c134 = function(test, consequent, alternate) {
        return {
          type: 'ConditionalExpression',
          test: test,
          consequent: consequent,
          alternate: alternate
        };
    };
  const peg$c135 = function(test, consequent) {
      return {
        type: 'ConditionalExpression',
        test: test,
        consequent: consequent,
        alternate: undefined
      };
    };
  const peg$c136 = "=";
  const peg$c137 = peg$literalExpectation("=", false);
  const peg$c138 = function(left, right) {
      return {
        type: 'AssignmentExpression',
        left: left,
        right: right
      };
    };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean) {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase: boolean) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message, location1) {
    return new SyntaxError(message, "", "", location1);
  }

  function peg$buildStructuredError(expected1, found, location1) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseFormula();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFormula() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseExpressionStatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseExpressionStatement();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseExpressionStatement();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpressionStatement() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseAssignmentExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEOS();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    let s0, s1;

    s0 = [];
    s1 = peg$parseWhiteSpace();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseWhiteSpace();
    }

    return s0;
  }

  function peg$parse__() {
    let s0, s1;

    s0 = [];
    s1 = peg$parseWhiteSpace();
    if (s1 === peg$FAILED) {
      s1 = peg$parseLineTerminatorSequence();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseWhiteSpace();
      if (s1 === peg$FAILED) {
        s1 = peg$parseLineTerminatorSequence();
      }
    }

    return s0;
  }

  function peg$parseWhiteSpace() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c5;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
    }

    return s0;
  }

  function peg$parseLineTerminatorSequence() {
    let s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c8;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c10) {
        s0 = peg$c10;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c12;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseEOS() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLineTerminatorSequence();
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s2 = peg$c14;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse__();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseEOF();
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseEOF() {
    let s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = undefined;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAND() {
    let s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c17) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parseELSE() {
    let s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c19) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }

    return s0;
  }

  function peg$parseEQUALS() {
    let s0;

    if (input.substr(peg$currPos, 6).toLowerCase() === peg$c21) {
      s0 = input.substr(peg$currPos, 6);
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }

    return s0;
  }

  function peg$parseFALSE() {
    let s0;

    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c23) {
      s0 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }

    return s0;
  }

  function peg$parseIF() {
    let s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c25) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c26); }
    }

    return s0;
  }

  function peg$parseIN() {
    let s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c27) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c28); }
    }

    return s0;
  }

  function peg$parseTHEN() {
    let s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c29) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c30); }
    }

    return s0;
  }

  function peg$parseNOT() {
    let s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c31) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c32); }
    }

    return s0;
  }

  function peg$parseOR() {
    let s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c33) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c34); }
    }

    return s0;
  }

  function peg$parseTRUE() {
    let s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c35) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c36); }
    }

    return s0;
  }

  function peg$parseXOR() {
    let s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c37) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c38); }
    }

    return s0;
  }

  function peg$parseReservedWord() {
    let s0;

    s0 = peg$parseBooleanLiteral();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAND();
      if (s0 === peg$FAILED) {
        s0 = peg$parseELSE();
        if (s0 === peg$FAILED) {
          s0 = peg$parseEQUALS();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIF();
            if (s0 === peg$FAILED) {
              s0 = peg$parseIN();
              if (s0 === peg$FAILED) {
                s0 = peg$parseTHEN();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseNOT();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseOR();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseTRUE();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseXOR();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseIdentifier() {
    let s0, s1, s2;
